:bug: Fixing issue with HubSpot CTA vertical alignment
Should be properly veritcally aligned in the button

--- a/cta.sass
+++ b/cta.sass
@@ -1,4 +1,4 @@
-/*! responsivectabuilder.com v2.0.0 | github.com/buildbetterCTAs/cta.css */
+/*! responsivectabuilder.com v2.0.1 | github.com/buildbetterCTAs/cta.css */
 
 // CLASS NAMESPACE
 $namespace: "rcta"
@@ -94,6 +94,7 @@ $tinyAndDown: "only screen and (max-width: #{$tinyScreen})" !default
     &.#{$namespace}_button-hubl
       a
         color: inherit
+        vertical-align: initial
 
         &:hover
           color: inherit !important
